syntax = "proto3";

package manager_dictionary;
option go_package = "./v1;v1";

import "validate/validate.proto";

message Dictionary {
  uint32 id = 1;
  string keyword = 2;
  string name = 3;
  string description = 4;
  optional uint32 created_at = 5;
  optional uint32 updated_at = 6;
}

message PageDictionaryRequest{
  uint32 page = 1[(validate.rules).uint32 = {gt: 0}];
  uint32 page_size = 2[(validate.rules).uint32 = {gt: 0,lte:50}];
  optional string keyword = 3;
  optional string name = 4;
}

message PageDictionaryReply{
  uint32 total = 1;
  repeated Dictionary list = 2;
}

message AddDictionaryRequest{
  string keyword = 1[(validate.rules).string = {min_len:1}];
  string name = 2[(validate.rules).string = {min_len:1}];
  string description = 3[(validate.rules).string = {min_len:1}];
}

message AddDictionaryReply{
  uint32 id = 1;
}

message UpdateDictionaryRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
  string keyword = 2[(validate.rules).string = {min_len:1}];
  string name = 3[(validate.rules).string = {min_len:1}];
  string description = 4[(validate.rules).string = {min_len:1}];
}

message DeleteDictionaryRequest{
  uint32 id = 1[(validate.rules).uint32 = {gt:0}];
}
